<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, NewBookingActivity!</string>
    <string name="app_name">Accountant</string>
    <string name="create_new_booking">Create New Booking</string>
    <string name="amount">Amount</string>
    <string name="booking_type_in">Income</string>
    <string name="booking_type_out">Expense</string>
    <string name="booking_type_transaction">Transaction</string>
    <string name="text">Text</string>
    <string name="bank">Bank</string>
    <string name="category">Category</string>
    <string name="income_source">Income Source</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <color name="red">#FF0000</color>
    <string name="choose">Choose</string>
    <string name="date">Date</string>
    <string name="bookings_list">Bookings List</string>
    <string name="text_enter">↵</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="to">→</string>
    <string name="new_booking">New Booking</string>
    <string name="error">Error</string>
    <string name="booking_text">Booking Text</string>
    <string name="change">Change</string>
    <string name="saved_changes_in_booking">Saved changes in booking &quot;%1$s&quot;, %2$s\n%3$s → %4$s</string>
    <string name="created_new_booking">Created new booking &quot;%1$s&quot;, %2$s\n%3$s → %4$s</string>
    <string name="sd_card_not_mounted">SD card not mounted</string>
    <string name="invalid_booking">Invalid Booking</string>
    <string name="an_account_with_this_name_exists_already">An account with this name exists already.</string>
    <string name="add_new">Add new...</string>
    <string name="create">Create</string>
    <string name="overview">Overview</string>
    <string name="bookings_overview">Bookings Overview</string>
    <string name="booking">Booking</string>
    <string name="internal_error">Internal Error</string>
    <string name="ignore_first_line_in_csv_file">Ignore first line in CSV file</string>
    <string name="delimiter">Delimiter</string>
    <string name="quoter">Quoter</string>
    <string name="import_csv">Import</string>
    <string name="unused">Unused</string>
    <string name="could_not_start_import_specified_more_than_once">
                                 Could not start import. %1$s was specified more than once.</string>
    <string name="could_not_start_import_missing">Could not start import. %1$s is missing.</string>
    <string name="encoding">Encoding</string>
</resources>
