<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:scrollbars="vertical">
    <Button android:id="@+id/button1" android:text="@string/bookings_list" android:layout_width="wrap_content" android:layout_height="30dip"></Button>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Amount" android:id="@+id/amount_label"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent">
        <EditText android:numeric="decimal" android:layout_height="wrap_content" android:hint="@string/amount" android:layout_width="wrap_content" android:id="@+id/amount" android:inputType="phone|numberDecimal"></EditText>
        <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/booking_type_spinner"></Spinner>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/text_label" android:text="@string/text"></TextView>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="horizontal" android:layout_gravity="fill_horizontal" android:gravity="fill_horizontal">
        <EditText android:id="@+id/text_edit" android:hint="@string/text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"></EditText>
        <Button android:layout_height="wrap_content" android:layout_weight="0" android:layout_width="100dip" android:text="@string/choose" android:id="@+id/text_chooser_button"></Button>
    </LinearLayout>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/bank" android:id="@+id/source_label"></TextView>
    <Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/source_spinner"></Spinner>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/category" android:id="@+id/dest_label"></TextView>
    <Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/dest_spinner"></Spinner>
    <TextView android:layout_height="wrap_content" android:text="@string/date" android:layout_width="wrap_content" android:id="@+id/date_label"></TextView>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Button" android:id="@+id/date_input"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/create_booking_button" android:text="@string/create_booking"></Button>
</LinearLayout>
